fixed spacing of images

--- a/css/pstyle.css
+++ b/css/pstyle.css
@@ -20,7 +20,7 @@ img{
 }
 
 .linkcontainer{
-  min-height: 80px;
+  height: 100px;
 }
 
 .button-collapse {
